--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "lucide": "^0.511.0",
     "lucide-react": "^0.511.0",
+    "motion": "^12.15.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
